@@ -37,13 +37,13 @@ public class DeliverPatientTask extends AbstractTask
 		if(treated>1)
 		{
 			obj.setProperty(PROPERTY_PATIENT, Boolean.FALSE);
-			obj.setProperty(PROPERTY_TREATED, new Double(0));
+			obj.setProperty(PROPERTY_TREATED, Double.valueOf(0));
 			obj.setProperty("state", "idle");
 			setFinished(space, obj, true);
 		}
 		else
 		{
-			obj.setProperty(PROPERTY_TREATED, new Double(treated));			
+			obj.setProperty(PROPERTY_TREATED, Double.valueOf(treated));			
 		}
 	}
 }
