@@ -52,7 +52,7 @@ public class MoveAction extends SimplePropertyObject implements ISpaceAction
 		// Emit heat.
 		ISpaceObject patch = (ISpaceObject)grid.getSpaceObjectsByGridPosition(pos, "patch").iterator().next();
 		double heat = ((Double)patch.getProperty("heat")).doubleValue();
-		patch.setProperty("heat", new Double(heat+output_heat));
+		patch.setProperty("heat", Double.valueOf(heat+output_heat));
 		
 		return null;
 	}
