@@ -55,7 +55,7 @@ public class Sub implements IFunction
 			}
 		}
 		
-		return new Double(ret);
+		return Double.valueOf(ret);
 	}
 	
 	/**
